// Vitest Snapshot v1

exports[`resolve > basic 1`] = `
"const a = 'a';

const foo = 'bar';

export { a, foo };
"
`;

exports[`resolve > exclude-self 1`] = `
"const a = 'a';

const foo = 'bar';

export { a, foo };
"
`;

exports[`resolve > import-all 1`] = `
"const a = 'a';

const foo = 'bar';

console.log(a);
console.log(foo);

export { a, foo };
"
`;

exports[`resolve > ts 1`] = `
"const a = 'a';

const foo = 'bar';

export { a, foo };
"
`;
